--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Ayan J</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=0">
+  <meta name="viewport" content="width=device-width, initial-scale=1rem">
   <link rel="icon" type="image/x-icon" href="favicon.svg">
 </head>
 <body>
