Stable, commit added buttons and tab navigation

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,20 @@
 <body>
   <app-root></app-root>
   <projectpage-root></projectpage-root>
+  <script>
+    // Make scrollToSection available globally
+    window.scrollToSection = function(sectionId) {
+      const section = document.getElementById(sectionId);
+      if (section) {
+        section.scrollIntoView({ behavior: 'smooth' });
+      }
+    };
+
+    // Update CSS variables for cursor position on mousemove
+    document.addEventListener('mousemove', (e) => {
+      document.documentElement.style.setProperty('--cursor-x', e.clientX + 'px');
+      document.documentElement.style.setProperty('--cursor-y', e.clientY + 'px');
+    });
+  </script>
 </body>
 </html>
